unpackaged/main/default/objects/Account/fields/Ability_to_leverage_Existing_Atkore_GTM__c.field-meta.xml
<CustomField>
    <fullName>Ability_to_leverage_Existing_Atkore_GTM__c</fullName>
    <description>2= High overlap with GTM
1= Some overlap with GTM
0= Low overlap with GTM</description>
    <inlineHelpText>2= High overlap with GTM
1= Some overlap with GTM
0= Low overlap with GTM</inlineHelpText>
    <label>Ability to leverage Existing Atkore GTM</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>