unpackaged/main/default/objects/Account/fields/Account_Num__c.field-meta.xml
<CustomField>
    <fullName>Account_Num__c</fullName>
    <label>Account #</label>
    <length>6</length>
    <type>Text</type>
</CustomField>