unpackaged/main/default/objects/Account/fields/Account_Team_List__c.field-meta.xml
<CustomField>
    <fullName>Account_Team_List__c</fullName>
    <description>The list of account team members, separated by a semi-colon</description>
    <inlineHelpText>The list of account team members, separated by a semi-colon</inlineHelpText>
    <label>Account Team List</label>
    <length>255</length>
    <type>Text</type>
</CustomField>