unpackaged/main/default/objects/Account/fields/Acct_Status__c.field-meta.xml
<CustomField>
    <fullName>Acct_Status__c</fullName>
    <description>Acct Status in SAP (Active or Inactive_</description>
    <inlineHelpText>Acct Status in SAP (Active or Inactive_</inlineHelpText>
    <label>Acct Status</label>
    <length>8</length>
    <type>Text</type>
</CustomField>