unpackaged/main/default/objects/Account/fields/Achieve_Relevant_Market_Position__c.field-meta.xml
<CustomField>
    <fullName>Achieve_Relevant_Market_Position__c</fullName>
    <description>2= Yes we will become #1-#3 with this company
1= Yes we will become #1-#3 with this company but it will take multiple steps
0= Unclear path to #1-#3 position</description>
    <inlineHelpText>2= Yes we will become #1-#3 with this company
1= Yes we will become #1-#3 with this company but it will take multiple steps
0= Unclear path to #1-#3 position</inlineHelpText>
    <label>Achieve Relevant Market Position</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>