unpackaged/main/default/objects/Account/fields/ACS_Pre_Fab_ContractorRevenue__c.field-meta.xml
<CustomField>
    <fullName>ACS_Pre_Fab_ContractorRevenue__c</fullName>
    <description>Contractor FYTD Revenue</description>
    <label>ACS Pre-Fab</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>