unpackaged/main/default/objects/Account/fields/Actionability_Score__c.field-meta.xml
<CustomField>
    <fullName>Actionability_Score__c</fullName>
    <formula>Likelihood_of_sale_in_the_next_24_months__c +  Regulatory_Barriers__c + Transaction_Complexity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actionability Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>