unpackaged/main/default/objects/Account/fields/Agent_Number_formula__c.field-meta.xml
<CustomField>
    <fullName>Agent_Number_formula__c</fullName>
    <formula>IF( ISPICKVAL( Owner.UserRole.PortalType , &quot;Partner&quot;),  Owner.Salesperson_Number__c , &quot;&quot; )</formula>
    <label>Agent Number</label>
    <type>Text</type>
</CustomField>