unpackaged/main/default/objects/Account/fields/Agent_Partner_Account__c.field-meta.xml
<CustomField>
    <fullName>Agent_Partner_Account__c</fullName>
    <description>Since the field IsPartner (Partner Account) is unavailable to custom formulas or sharing rule criteria, this field is needed to be able to create sharing rules around Partner Accounts.  Partner Accounts need to be visible so that Project Contacts can be created for Agents.</description>
    <inlineHelpText>Since the field IsPartner (Partner Account) is unavailable to custom formulas or sharing rule criteria, this field is needed to be able to create sharing rules around Partner Accounts.</inlineHelpText>
    <label>Agent Partner Account</label>
    <length>1</length>
    <type>Text</type>
</CustomField>