unpackaged/main/default/objects/Account/fields/Agent_Regions_formula__c.field-meta.xml
<CustomField>
    <fullName>Agent_Regions_formula__c</fullName>
    <formula>IF( ISPICKVAL(Owner.UserRole.PortalType, &quot;Partner&quot;) , Owner.Regions__c, &quot;&quot;)</formula>
    <label>Agent Regions</label>
    <type>Text</type>
</CustomField>