unpackaged/main/default/objects/Account/fields/Agent_Sub_Brands__c.field-meta.xml
<CustomField>
    <fullName>Agent_Sub_Brands__c</fullName>
    <label>Agent Sub-Brands</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Heritage Plastics</fullName>
            </value>
            <value>
                <fullName>AFC Cable Systems</fullName>
            </value>
            <value>
                <fullName>Allied Tube &amp; Conduit</fullName>
            </value>
            <value>
                <fullName>Calbond</fullName>
            </value>
            <value>
                <fullName>Calbrite</fullName>
            </value>
            <value>
                <fullName>Kaf-tech</fullName>
                <label>Kaf-Tech</label>
            </value>
            <value>
                <fullName>Unistrut</fullName>
            </value>
            <value>
                <fullName>Calconduit</fullName>
            </value>
            <value>
                <fullName>Power-Strut</fullName>
            </value>
            <value>
                <fullName>Eastern Wire &amp; Conduit</fullName>
            </value>
            <value>
                <fullName>ACS/Uni-Fab</fullName>
            </value>
            <value>
                <fullName>CII</fullName>
                <label>Cii</label>
            </value>
            <value>
                <fullName>Cope</fullName>
            </value>
            <value>
                <fullName>Flexicon</fullName>
            </value>
            <value>
                <fullName>US Tray</fullName>
            </value>
            <value>
                <fullName>FRE Composites</fullName>
            </value>
            <value>
                <fullName>Queen City Plastics</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>