unpackaged/main/default/objects/Account/fields/Aluminum_Conduit_and_Fittings_Rep__c.field-meta.xml
<CustomField>
    <fullName>Aluminum_Conduit_and_Fittings_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Aluminum Conduit and Fittings Rep</label>
    <type>Checkbox</type>
</CustomField>