unpackaged/main/default/objects/Account/fields/APAC_Attribute8_Misc__c.field-meta.xml
<CustomField>
    <fullName>APAC_Attribute8_Misc__c</fullName>
    <description>Attribute8 (Misc) for APAC data</description>
    <label>Attribute8 (Misc)</label>
    <length>25</length>
    <type>Text</type>
</CustomField>