unpackaged/main/default/objects/Account/fields/APAC_Customer_Category__c.field-meta.xml
<CustomField>
    <fullName>APAC_Customer_Category__c</fullName>
    <description>Customer Category for APAC data</description>
    <label>Customer Category</label>
    <length>30</length>
    <type>Text</type>
</CustomField>