unpackaged/main/default/objects/Account/fields/APAC_Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>APAC_Customer_Group__c</fullName>
    <description>Customer Group field for APAC data</description>
    <label>Customer Group</label>
    <length>25</length>
    <type>Text</type>
</CustomField>