unpackaged/main/default/objects/Account/fields/APAC_Customer_Rebate_Reporting__c.field-meta.xml
<CustomField>
    <fullName>APAC_Customer_Rebate_Reporting__c</fullName>
    <description>Customer Rebate Reporting for APAC data</description>
    <label>Customer Rebate Reporting</label>
    <length>25</length>
    <type>Text</type>
</CustomField>