unpackaged/main/default/objects/Account/fields/APAC_Pricing_Group__c.field-meta.xml
<CustomField>
    <fullName>APAC_Pricing_Group__c</fullName>
    <description>Pricing Group for APAC data</description>
    <label>Pricing Group</label>
    <length>25</length>
    <type>Text</type>
</CustomField>