unpackaged/main/default/objects/Account/fields/APAC_Sales_Area__c.field-meta.xml
<CustomField>
    <fullName>APAC_Sales_Area__c</fullName>
    <description>Sales Area for APAC data</description>
    <label>Sales Area</label>
    <length>25</length>
    <type>Text</type>
</CustomField>