unpackaged/main/default/objects/Account/fields/APAC_Trading_Unit__c.field-meta.xml
<CustomField>
    <fullName>APAC_Trading_Unit__c</fullName>
    <description>Trading Unit for APAC data</description>
    <label>Trading Unit</label>
    <length>25</length>
    <type>Text</type>
</CustomField>