unpackaged/main/default/objects/Account/fields/Assets_of_Interest__c.field-meta.xml
<CustomField>
    <fullName>Assets_of_Interest__c</fullName>
    <label>Assets of Interest</label>
    <type>TextArea</type>
</CustomField>