unpackaged/main/default/objects/Account/fields/Assignment_Method__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Method__c</fullName>
    <description>Territory Assignment Method (PC = PostalCode, CO=Country, SP=State/Province) - Set from ISO Country Codes Custom Setting</description>
    <inlineHelpText>Territory Assignment Method (PC = PostalCode, CO=Country, SP=State/Province) - Set from ISO Country Codes Custom Setting</inlineHelpText>
    <label>Assignment Method</label>
    <length>2</length>
    <type>Text</type>
</CustomField>