unpackaged/main/default/objects/Account/fields/Assignment_Zip__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Zip__c</fullName>
    <description>Apex code uses this value to determine proper sales rep</description>
    <inlineHelpText>Apex code uses this value to determine proper sales rep</inlineHelpText>
    <label>Assignment Zip</label>
    <length>15</length>
    <type>Text</type>
</CustomField>