unpackaged/main/default/objects/Account/fields/Atkore_Atvantage_Customer__c.field-meta.xml
<CustomField>
    <fullName>Atkore_Atvantage_Customer__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is this account part of the Atkore Atvantage Program?</inlineHelpText>
    <label>Atkore Atvantage Customer</label>
    <type>Checkbox</type>
</CustomField>