unpackaged/main/default/objects/Account/fields/Attractiveness_Score__c.field-meta.xml
<CustomField>
    <fullName>Attractiveness_Score__c</fullName>
    <formula>Strategic_Fit_MA__c + Growth_Outlook__c + Achieve_Relevant_Market_Position__c + Ability_to_leverage_Existing_Atkore_GTM__c + Gross_Margin_30__c + Synergies_Commercial_and_or_Cost__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attractiveness Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>