unpackaged/main/default/objects/Account/fields/Barbed_Tape_Global_Account_Initiative__c.field-meta.xml
<CustomField>
    <fullName>Barbed_Tape_Global_Account_Initiative__c</fullName>
    <defaultValue>false</defaultValue>
    <description>tracking for Barbed Tape Global Account Initiative</description>
    <inlineHelpText>tracking for Barbed Tape Global Account Initiative</inlineHelpText>
    <label>Barbed Tape Global Account Initiative</label>
    <type>Checkbox</type>
</CustomField>