unpackaged/main/default/objects/Account/fields/BillingCounty__c.field-meta.xml
<CustomField>
    <fullName>BillingCounty__c</fullName>
    <label>Billing County</label>
    <length>150</length>
    <type>Text</type>
</CustomField>