unpackaged/main/default/objects/Account/fields/BIM_Project_Value_ContractorRevenue__c.field-meta.xml
<CustomField>
    <fullName>BIM_Project_Value_ContractorRevenue__c</fullName>
    <description>Contractor FYTD Revenue</description>
    <label>BIM Project Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>