unpackaged/main/default/objects/Account/fields/Business_Unit_Suppliers__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit_Suppliers__c</fullName>
    <label>Business Unit</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cable Solutions</fullName>
            </value>
            <value>
                <fullName>Conduit &amp; Fittings</fullName>
            </value>
            <value>
                <fullName>Mechanical Products &amp; Solutions</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>