unpackaged/main/default/objects/Account/fields/Buy_America_Certified__c.field-meta.xml
<CustomField>
    <fullName>Buy_America_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buy America Certified</label>
    <type>Checkbox</type>
</CustomField>