unpackaged/main/default/objects/Account/fields/Buy_American_Certified__c.field-meta.xml
<CustomField>
    <fullName>Buy_American_Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buy American Certified</label>
    <type>Checkbox</type>
</CustomField>