unpackaged/main/default/objects/Account/fields/Buying_Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Buying_Customer_Group__c</fullName>
    <description>Used for reporting when want to group by CODE but also want to see customers with no code value.</description>
    <formula>IF( ISBLANK(SACODE__c), Name, SACODE__c)</formula>
    <label>Buying or Customer Group</label>
    <type>Text</type>
</CustomField>