unpackaged/main/default/objects/Account/fields/BuyingGroup__c.field-meta.xml
<CustomField>
    <fullName>BuyingGroup__c</fullName>
    <label>BuyingGroup</label>
    <length>255</length>
    <type>Text</type>
</CustomField>