unpackaged/main/default/objects/Account/fields/CA_Prop_65_Compliance_Date__c.field-meta.xml
<CustomField>
    <fullName>CA_Prop_65_Compliance_Date__c</fullName>
    <label>CA Prop 65 Compliance Date</label>
    <type>Date</type>
</CustomField>