unpackaged/main/default/objects/Account/fields/Cable_Tray_ContractorRevenue__c.field-meta.xml
<CustomField>
    <fullName>Cable_Tray_ContractorRevenue__c</fullName>
    <description>Contractor FYTD Revenue</description>
    <label>Cable Tray</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>