unpackaged/main/default/objects/Account/fields/California_Prop_65_Compliant__c.field-meta.xml
<CustomField>
    <fullName>California_Prop_65_Compliant__c</fullName>
    <defaultValue>false</defaultValue>
    <label>California Prop 65 Compliant</label>
    <type>Checkbox</type>
</CustomField>