unpackaged/main/default/objects/Account/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>Please enter the City of this Company</description>
    <inlineHelpText>Please enter the City of this Company</inlineHelpText>
    <label>City</label>
    <length>27</length>
    <type>Text</type>
</CustomField>