unpackaged/main/default/objects/Account/fields/CMACTV__c.field-meta.xml
<CustomField>
    <fullName>CMACTV__c</fullName>
    <description>CMACTV from DMCUSREC</description>
    <inlineHelpText>blank=Active,A=Active,I=Inactive</inlineHelpText>
    <label>Active Record</label>
    <length>1</length>
    <type>Text</type>
</CustomField>