unpackaged/main/default/objects/Account/fields/CMCRAT__c.field-meta.xml
<CustomField>
    <fullName>CMCRAT__c</fullName>
    <label>Credit Rating</label>
    <length>1</length>
    <type>Text</type>
</CustomField>