unpackaged/main/default/objects/Account/fields/CMCRED__c.field-meta.xml
<CustomField>
    <fullName>CMCRED__c</fullName>
    <description>CMCRED from DMCUSREC</description>
    <label>Credit Approved Amount</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>