unpackaged/main/default/objects/Account/fields/CMCRLM__c.field-meta.xml
<CustomField>
    <fullName>CMCRLM__c</fullName>
    <description>CMCRLM from DMCUSREC</description>
    <label>Customer Credit Limit</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>