unpackaged/main/default/objects/Account/fields/CMCRMO__c.field-meta.xml
<CustomField>
    <fullName>CMCRMO__c</fullName>
    <description>CMCRMO from DMCUSREC</description>
    <label>Cash Receipts (Current Month)</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>