unpackaged/main/default/objects/Account/fields/CMCURR__c.field-meta.xml
<CustomField>
    <fullName>CMCURR__c</fullName>
    <description>CMCURR from DMCUSREC</description>
    <label>Amount Due Current Month</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>