unpackaged/main/default/objects/Account/fields/CMFUT1__c.field-meta.xml
<CustomField>
    <fullName>CMFUT1__c</fullName>
    <description>CMFUT1 from DMCUSREC</description>
    <label>Amount Due in 1 Month</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>