unpackaged/main/default/objects/Account/fields/CMFUT2__c.field-meta.xml
<CustomField>
    <fullName>CMFUT2__c</fullName>
    <description>CMFUT2 from DMCUSREC</description>
    <label>Amount Due in 2 Months</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>