unpackaged/main/default/objects/Account/fields/CMFUT3__c.field-meta.xml
<CustomField>
    <fullName>CMFUT3__c</fullName>
    <description>CMFUT3 from DMCUSREC</description>
    <label>Amount Due in 3 Months</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>