unpackaged/main/default/objects/Account/fields/CMPST1__c.field-meta.xml
<CustomField>
    <fullName>CMPST1__c</fullName>
    <description>CMPST1 from DMCUSREC</description>
    <label>Amount 1 Month Past Due</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>