unpackaged/main/default/objects/Account/fields/CMPST2__c.field-meta.xml
<CustomField>
    <fullName>CMPST2__c</fullName>
    <description>CMPST2 from DMCUSREC</description>
    <label>Amount 2 Months Past Due</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>