unpackaged/main/default/objects/Account/fields/CMPST3__c.field-meta.xml
<CustomField>
    <fullName>CMPST3__c</fullName>
    <description>CMPST3 from DMCUSREC</description>
    <label>Amount 3 Months Past Due</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>