unpackaged/main/default/objects/Account/fields/CMPYCC__c.field-meta.xml
<CustomField>
    <fullName>CMPYCC__c</fullName>
    <description>CMPYCC from DMCUSREC</description>
    <label>Payment Date Century</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>