unpackaged/main/default/objects/Account/fields/CMPYDT__c.field-meta.xml
<CustomField>
    <fullName>CMPYDT__c</fullName>
    <description>CMPYDT from DMCUSREC</description>
    <label>Last Payment Date</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>