unpackaged/main/default/objects/Account/fields/CMRT_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>CMRT_Received_Date__c</fullName>
    <label>CMRT Received Date</label>
    <type>Date</type>
</CustomField>