unpackaged/main/default/objects/Account/fields/CMSLMO__c.field-meta.xml
<CustomField>
    <fullName>CMSLMO__c</fullName>
    <description>CMSLMO from DMCUSREL</description>
    <label>Rel. Ord Dollars</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>