unpackaged/main/default/objects/Account/fields/CMSLYD__c.field-meta.xml
<CustomField>
    <fullName>CMSLYD__c</fullName>
    <description>CMSLYD from DMCUSREC</description>
    <label>Sales (Year To Date)</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>