unpackaged/main/default/objects/Account/fields/CMSTCC__c.field-meta.xml
<CustomField>
    <fullName>CMSTCC__c</fullName>
    <description>CMSTCC from DMCUSREC</description>
    <label>Statement Date Century</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>