unpackaged/main/default/objects/Account/fields/CMSTDT__c.field-meta.xml
<CustomField>
    <fullName>CMSTDT__c</fullName>
    <description>CMSTDT from DMCUSREC</description>
    <label>Last Statement Date</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>