unpackaged/main/default/objects/Account/fields/CMSTE__c.field-meta.xml
<CustomField>
    <fullName>CMSTE__c</fullName>
    <description>CMSTE from DMCUSREC</description>
    <label>State Abbreviation</label>
    <length>2</length>
    <type>Text</type>
</CustomField>