unpackaged/main/default/objects/Account/fields/CMTAMT__c.field-meta.xml
<CustomField>
    <fullName>CMTAMT__c</fullName>
    <description>CMTAMT from DMCUSREC</description>
    <label>Total Amount Due</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>