unpackaged/main/default/objects/Account/fields/CMTERM__c.field-meta.xml
<CustomField>
    <fullName>CMTERM__c</fullName>
    <description>CMTERM from DMCUSREC</description>
    <label>Sales Terms</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>