unpackaged/main/default/objects/Account/fields/CMZIP__c.field-meta.xml
<CustomField>
    <fullName>CMZIP__c</fullName>
    <description>CMZIP from DMCUSREC</description>
    <label>Zip Code</label>
    <length>9</length>
    <type>Text</type>
</CustomField>