unpackaged/main/default/objects/Account/fields/Co_Load_Rep__c.field-meta.xml
<CustomField>
    <fullName>Co_Load_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Co-Load Rep</label>
    <type>Checkbox</type>
</CustomField>