unpackaged/main/default/objects/Account/fields/Co_op__c.field-meta.xml
<CustomField>
    <fullName>Co_op__c</fullName>
    <description>Co-op for which customer is a member</description>
    <label>Co-op</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ATCM</fullName>
            </value>
            <value>
                <fullName>ATCE MKTG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>