unpackaged/main/default/objects/Account/fields/Company_Name_Address__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Address__c</fullName>
    <description>For use in reporting when company name and address is needed in grouping</description>
    <formula>Name &amp; &quot; &quot; &amp; BillingStreet &amp; &quot; &quot; &amp;  BillingCity &amp; &quot; &quot; &amp; BillingState &amp; &quot; &quot; &amp;  BillingPostalCode</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Name &amp; Address</label>
    <type>Text</type>
</CustomField>