unpackaged/main/default/objects/Account/fields/Company_Name_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Number__c</fullName>
    <formula>Name &amp;  &quot; &quot; &amp; Customer_Number__c</formula>
    <label>Company Name &amp; Number</label>
    <type>Text</type>
</CustomField>