unpackaged/main/default/objects/Account/fields/Company_Name_Without_Prefix__c.field-meta.xml
<CustomField>
    <fullName>Company_Name_Without_Prefix__c</fullName>
    <formula>IF(CONTAINS(LEFT(Name, 5), &#39;-UK:&#39;), RIGHT(Name, LEN(Name)-5), Name)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Name</label>
    <type>Text</type>
</CustomField>