unpackaged/main/default/objects/Account/fields/Company_no_prefix__c.field-meta.xml
<CustomField>
    <fullName>Company_no_prefix__c</fullName>
    <description>Company Name without F-UK: prefix</description>
    <formula>SUBSTITUTE(Name, &quot;F-UK:&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company</label>
    <type>Text</type>
</CustomField>