unpackaged/main/default/objects/Account/fields/Company_Number__c.field-meta.xml
<CustomField>
    <fullName>Company_Number__c</fullName>
    <formula>CommercientSF__Commercient_ArCustomerCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Number</label>
    <type>Text</type>
</CustomField>