unpackaged/main/default/objects/Account/fields/Company_Number_and_Name__c.field-meta.xml
<CustomField>
    <fullName>Company_Number_and_Name__c</fullName>
    <description>For use in reporting when company name and address is needed in grouping</description>
    <formula>Customer_Number__c  &amp;  &quot; &quot; &amp; Name</formula>
    <label>Company Number &amp; Name</label>
    <type>Text</type>
</CustomField>