unpackaged/main/default/objects/Account/fields/Conduit_Cable_Fittings_Rep__c.field-meta.xml
<CustomField>
    <fullName>Conduit_Cable_Fittings_Rep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Conduit &amp; Cable Fittings Rep</label>
    <type>Checkbox</type>
</CustomField>