unpackaged/main/default/objects/Account/fields/Conflict_Minerals_Response__c.field-meta.xml
<CustomField>
    <fullName>Conflict_Minerals_Response__c</fullName>
    <label>Conflict Minerals Response</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>