unpackaged/main/default/objects/Account/fields/Contains_3TG__c.field-meta.xml
<CustomField>
    <fullName>Contains_3TG__c</fullName>
    <label>Contains 3TG</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>