unpackaged/main/default/objects/Account/fields/ConvertedLead__c.field-meta.xml
<CustomField>
    <fullName>ConvertedLead__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This account was generated from a converted lead</description>
    <inlineHelpText>This account was generated from a converted lead</inlineHelpText>
    <label>ConvertedLead</label>
    <type>Checkbox</type>
</CustomField>