unpackaged/main/default/objects/Account/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>Please enter the Country of this Company</description>
    <inlineHelpText>Please enter the Country of this Company</inlineHelpText>
    <label>Country</label>
    <length>45</length>
    <type>Text</type>
</CustomField>