unpackaged/main/default/objects/Account/fields/CPQ_Pricing_Divisions__c.field-meta.xml
<CustomField>
    <fullName>CPQ_Pricing_Divisions__c</fullName>
    <inlineHelpText>Drives Available Products on the Quote Line</inlineHelpText>
    <label>CPQ Pricing Divisions</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>CRC</fullName>
                <label>Aluminum Conduit &amp; Fittings</label>
            </value>
            <value>
                <fullName>CABLEMANAGE</fullName>
                <label>Cable Management</label>
            </value>
            <value>
                <fullName>Co-Load</fullName>
            </value>
            <value>
                <fullName>ALFITT</fullName>
                <label>Conduit &amp; Cable Fittings</label>
            </value>
            <value>
                <fullName>ECN</fullName>
            </value>
            <value>
                <fullName>AFC</fullName>
                <label>Electrical Cable &amp; Flexible Conduits</label>
            </value>
            <value>
                <fullName>FRE</fullName>
            </value>
            <value>
                <fullName>MTLFRM</fullName>
                <label>Metal Framing</label>
            </value>
            <value>
                <fullName>PVCCON</fullName>
                <label>PVC Conduit</label>
            </value>
            <value>
                <fullName>PVCFIT</fullName>
                <label>PVC Fittings</label>
            </value>
            <value>
                <fullName>PVCWPIPE</fullName>
                <label>PVC Water Pipe</label>
            </value>
            <value>
                <fullName>STEELCON</fullName>
                <label>Steel Conduit</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>