unpackaged/main/default/objects/Account/fields/Customer_Account_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Group__c</fullName>
    <label>Customer Account Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>