unpackaged/main/default/objects/Account/fields/Customer_Account_Group_Description__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Group_Description__c</fullName>
    <label>Customer Account Group Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>