unpackaged/main/default/objects/Account/fields/Customer_Balance__c.field-meta.xml
<CustomField>
    <fullName>Customer_Balance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Balance</label>
    <referenceTo>CustomerBal__c</referenceTo>
    <relationshipLabel>Companies</relationshipLabel>
    <relationshipName>Companies</relationshipName>
    <type>Lookup</type>
</CustomField>