unpackaged/main/default/objects/Account/fields/Customer_Class__c.field-meta.xml
<CustomField>
    <fullName>Customer_Class__c</fullName>
    <description>EMEA Customer Class</description>
    <label>Customer Class</label>
    <length>25</length>
    <type>Text</type>
</CustomField>