unpackaged/main/default/objects/Account/fields/Customer_Count__c.field-meta.xml
<CustomField>
    <fullName>Customer_Count__c</fullName>
    <description>Used in reporting for customer count</description>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used in reporting for customer count</inlineHelpText>
    <label>Customer Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>