unpackaged/main/default/objects/Account/fields/Customer_Group__c.field-meta.xml
<CustomField>
    <fullName>Customer_Group__c</fullName>
    <formula>IF(ISBLANK(SACODE__c), Company_Name_Number__c,  IF(SACODE__c = &#39;IMARK&#39;  || SACODE__c = &#39;AD&#39;, SALV01__c, SACODE__c) )</formula>
    <label>Customer Group (NA)</label>
    <type>Text</type>
</CustomField>