unpackaged/main/default/objects/Account/fields/Customer_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Customer_Grouping__c</fullName>
    <formula>IF(ISBLANK(SALV01__c), SACODE__c, SALV01__c)</formula>
    <label>Customer Grouping</label>
    <type>Text</type>
</CustomField>