unpackaged/main/default/objects/Account/fields/Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Atkore customer number (assigned by Atkore Allied One for N/A, SAP for AU and NZ, MAPICS for UK and FR)</description>
    <externalId>true</externalId>
    <label>Customer Number</label>
    <length>55</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>