unpackaged/main/default/objects/Account/fields/Customer_Number_Flexicon__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number_Flexicon__c</fullName>
    <formula>CommercientSF__Commercient_ArCustomerCode__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Number</label>
    <type>Text</type>
</CustomField>