unpackaged/main/default/objects/Account/fields/Customer_Number_native__c.field-meta.xml
<CustomField>
    <fullName>Customer_Number_native__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>Native Customer Number to be displayed in reports and on screens. Customer number stripped of prefixed system code (External ID is prefixed with system code for uniqueness for AU, NZ, EK, and FR)</description>
    <externalId>true</externalId>
    <label>Customer Number (native)</label>
    <length>100</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>