unpackaged/main/default/objects/Account/fields/Date_first_CM_Request_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_first_CM_Request_Sent__c</fullName>
    <label>Date first CM Request Sent</label>
    <type>Date</type>
</CustomField>