unpackaged/main/default/objects/Account/fields/Date_second_CM_Request_Sent__c.field-meta.xml
<CustomField>
    <fullName>Date_second_CM_Request_Sent__c</fullName>
    <label>Date second CM Request Sent</label>
    <type>Date</type>
</CustomField>