unpackaged/main/default/objects/Account/fields/DBA_Name__c.field-meta.xml
<CustomField>
    <fullName>DBA_Name__c</fullName>
    <description>Doing Business As is an additional field that comes in from the Hoovers file in the &quot;Doing Business As&quot; field.</description>
    <label>Doing Business As</label>
    <length>255</length>
    <type>Text</type>
</CustomField>