unpackaged/main/default/objects/Account/fields/Default_Price_Book__c.field-meta.xml
<CustomField>
    <fullName>Default_Price_Book__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Price Book to use if there is no Syspro customer record or the Syspro Customer record has no price code</description>
    <label>Default Price Book</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Companies</relationshipLabel>
    <relationshipName>Companies</relationshipName>
    <type>Lookup</type>
</CustomField>